# just-bench

./: .gitignore  LICENSE  README.md  just-bench.cabal  stack.yaml
Benchmark/: Time.hs
src/: Benchmark.hs
src/Benchmark/: Time.hs
src/JustBench/: Measure.hs
src/JustBench/Measure/: Memory.hs  Time.hs
