name:                just-bench
version:             0.1.0.0
synopsis:            just-bench is a Haskell function benchmarking library with an interface that is easy to understand and to use.
homepage:            https://github.com/DevWurm/just-bench
license:             MIT
license-file:        LICENSE
author:              DevWurm
maintainer:          devwurm@devwurm.net
bug-reports:         https://github.com/DevWurm/just-bench/issues
copyright:           (c) 2016 DevWurm
category:            Benchmarking
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     JustBench.Measure, JustBench.Measure.Time
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9, criterion >=1.1 && <1.2, abstract-par >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
